--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   Youtube UjanGX</button></i></p>
                 <a href="https://www.facebook.com/alvidi.muhamad?mibextid=ZbWKwL"></i><button><i
                       class="fa-brands fa-facebook"></i>
-                    Faceboox Vidi</button></i>
+                    Facebook Vidi</button></i>
   </div>
   <i class="fab fa-tiktok"></i>
 </body>
