--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         margin: auto;
         text-align: center;
         font-family: arial;
-        height: 100vh;
+        min-height: 100vh;
     }
 
     .title {
