--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                     Youtube OrangIndo</button></i></p>
                 <a href="https://discord.com/invite/nhyPDXuEmy"></i><button><i class="fa-brands fa-discord"></i>
                         Discord OrangIndo</button></i></p>
-                    <a href="https://tiktok.com/@oirp_kotaimpian"></i><button><i class="fa-brands fa-tiktok"></i>
+                   <a href="https://discord.gg/c2ZRVbBRd4"></i><button><i class="fa-brands fa-discord"></i>
+                        UjanGX Community</button></i></p>
+                     <a href="https://tiktok.com/@oirp_kotaimpian"></i><button><i class="fa-brands fa-tiktok"></i>
                             Tiktok OrangIndo</button></i></p>
                         <a href="https://wa.me/+6287852501355"></i><button><i class="fa-brands fa-whatsapp"></i>
                                 WhatApp Admin OIRP</button></i></p>
