--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div style="margin: 15px 0;">
             </div class="icons">
             <h2>FOLLOW ME</h2>
-            <a href="https://www.youtube.com/@orangindo_28"></i><button><i class="fa-brands fa-youtube"></i>
-                    Youtube OrangIndo</button></i></p>
-                <a href="https://discord.com/invite/nhyPDXuEmy"></i><button><i class="fa-brands fa-discord"></i>
-                        Discord OrangIndo</button></i></p>
+            <a href="https://discord.com/invite/nhyPDXuEmy"></i><button><i class="fa-brands fa-discord"></i>
+                    Discord Orang Indo Roleplay</button></i></p>
+                <a href="https://www.youtube.com/@orangindo_28"></i><button><i class="fa-brands fa-youtube"></i>
+                        Youtube OrangIndo</button></i></p>
                    <a href="https://discord.gg/c2ZRVbBRd4"></i><button><i class="fa-brands fa-discord"></i>
                         UjanGX Community</button></i></p>
                      <a href="https://tiktok.com/@oirp_kotaimpian"></i><button><i class="fa-brands fa-tiktok"></i>
