--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <a href="https://www.youtube.com/@orangindo_28"></i><button><i class="fa-brands fa-youtube"></i>
                         Youtube OrangIndo</button></i></p>
                    <a href="https://discord.gg/c2ZRVbBRd4"></i><button><i class="fa-brands fa-discord"></i>
-                        UjanGX Community</button></i></p>
+                        Gen Z Community</button></i></p>
                      <a href="https://tiktok.com/@oirp_kotaimpian"></i><button><i class="fa-brands fa-tiktok"></i>
                             Tiktok OrangIndo</button></i></p>
                         <a href="https://wa.me/+6287852501355"></i><button><i class="fa-brands fa-whatsapp"></i>
