--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                         <img src="img/close.svg" alt="">
                     </a></li>
                 <li><a href="https://forms.gle/wZaWkii3pYTAuZpt9">Lamaran Admin</a></li>
+                <li><a href="https://forms.gle/vAuTwWF3wqXyCgfz7">Lamaran Leader Faction</a></li>       
                 <li><a href="component/ip.html">IP Server</a></li>
                 <li><a href="component/boombox.html">URL Boombox</a></li>
             </ul>
